Fix those pesky vertical scrollbars

--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
-html,
-body {
+.wrapper {
   box-sizing: border-box;
-  height: 100%;
-  width: 100%;
   padding: 3px;
 }
 
